--- a/components/printers/sample/frmselprinter.lfm
+++ b/components/printers/sample/frmselprinter.lfm
@@ -1,25 +1,48 @@
 object Form1: TForm1
   Caption = 'Form1'
-  ClientHeight = 300
-  ClientWidth = 400
-  PixelsPerInch = 96
-  HorzScrollBar.Page = 401
-  VertScrollBar.Page = 301
-  Left = 290
-  Height = 300
-  Top = 156
-  Width = 400
-  object Button1: TButton
-    Caption = 'Select a printer'
-    OnClick = Button1Click
+  ClientHeight = 116
+  ClientWidth = 339
+  PixelsPerInch = 75
+  HorzScrollBar.Page = 338
+  VertScrollBar.Page = 115
+  Left = 245
+  Height = 116
+  Top = 167
+  Width = 339
+  object Label1: TLabel
+    Caption = 'This sample show how to use the printer dialogs'
+    Color = clNone
+    Left = 16
+    Height = 15
+    Top = 32
+    Width = 319
+  end
+  object Button2: TButton
+    Caption = 'Execute TPrinterSetupDialog'
+    OnClick = Button2Click
     TabOrder = 0
     Left = 16
     Height = 25
-    Top = 16
-    Width = 171
+    Top = 48
+    Width = 312
   end
-  object PD: TPrinterDialog
-    left = 16
-    top = 224
+  object Button1: TButton
+    BorderSpacing.OnChange = nil
+    Caption = 'Execute TPrintDialog'
+    OnClick = Button1Click
+    TabOrder = 1
+    Left = 16
+    Height = 25
+    Top = 80
+    Width = 312
+  end
+  object PSD: TPrinterSetupDialog
+    left = 8
+    top = 8
+  end
+  object PD: TPrintDialog
+    Copies = 1
+    left = 8
+    top = 248
   end
 end
