--- a/examples/lazintfimage/mainunit1.lfm
+++ b/examples/lazintfimage/mainunit1.lfm
@@ -1,23 +1,49 @@
 object Form1: TForm1
   Caption = 'Fade in - Example for TLazIntfImage'
-  ClientHeight = 300
-  ClientWidth = 400
+  ClientHeight = 541
+  ClientWidth = 498
   OnCreate = Form1Create
   OnDestroy = Form1Destroy
-  HorzScrollBar.Page = 401
-  VertScrollBar.Page = 301
+  PixelsPerInch = 75
+  HorzScrollBar.Page = 497
+  VertScrollBar.Page = 540
   Left = 291
-  Height = 300
+  Height = 541
   Top = 163
-  Width = 400
+  Width = 498
   object Button1: TButton
-    Anchors = [akTop]
+    Anchors = [akBottom]
+    BorderSpacing.OnChange = nil
     Caption = 'Fade in'
-    TabOrder = 0
     OnClick = Button1Click
-    Left = 36
+    TabOrder = 0
+    Left = 85
     Height = 25
-    Top = 234
+    Top = 466
     Width = 328
+  end
+  object Button2: TButton
+    Anchors = [akBottom]
+    Caption = 'Rotate by >>'
+    OnClick = Button2Click
+    TabOrder = 1
+    Left = 87
+    Height = 25
+    Top = 498
+    Width = 324
+  end
+  object Edit1: TEdit
+    BorderSpacing.OnChange = nil
+    BorderSpacing.Left = 5
+    BorderSpacing.Around = 5
+    TabOrder = 2
+    Text = '90'
+    AnchorSideLeft.Control = Button2
+    AnchorSideTop.Control = Button2
+    AnchorSideTop.Side = asrCenter
+    Left = 421
+    Height = 23
+    Top = 499
+    Width = 32
   end
 end
