--- a/ide/frmsearch.lfm
+++ b/ide/frmsearch.lfm
@@ -1,79 +1,89 @@
 object SearchForm: TSearchForm
-  BorderStyle = bsdialog
+  BorderStyle = bsDialog
   Caption = 'Searching....'
   ClientHeight = 149
   ClientWidth = 428
   OnCreate = SearchFormCREATE
   OnDestroy = SearchFormDESTROY
   ParentFont = True
-  Position = poownerformcenter
-  HorzScrollBar.Page = 429
-  VertScrollBar.Page = 150
+  PixelsPerInch = 96
+  Position = poOwnerFormCenter
+  HorzScrollBar.Page = 427
+  VertScrollBar.Page = 148
   Left = 461
   Height = 149
   Top = 289
   Width = 428
   object Panel2: TPanel
-    Align = alclient
-    BevelInner = bvlowered
+    Align = alClient
+    BorderSpacing.OnChange = nil
+    BevelInner = bvLowered
     ClientHeight = 149
     ClientWidth = 428
+    FullRepaint = False
     ParentFont = True
     TabOrder = 0
     TabStop = True
     Height = 149
     Width = 428
     object lblMatches: TLabel
-      Layout = tltop
+      BorderSpacing.OnChange = nil
+      Color = clNone
       Left = 96
       Height = 17
       Top = 80
       Width = 321
     end
     object Label1: TLabel
+      BorderSpacing.OnChange = nil
       Caption = 'Matches'
-      Layout = tltop
+      Color = clNone
       Left = 16
       Height = 17
       Top = 80
       Width = 64
     end
     object lblProgress: TLabel
-      Layout = tltop
+      AutoSize = False
+      BorderSpacing.OnChange = nil
+      Color = clNone
       Left = 96
       Height = 17
       Top = 48
       Width = 320
     end
     object Label2: TLabel
+      BorderSpacing.OnChange = nil
       Caption = 'Searching:'
-      Layout = tltop
+      Color = clNone
       Left = 16
       Height = 17
       Top = 48
       Width = 64
     end
     object Label4: TLabel
+      BorderSpacing.OnChange = nil
       Caption = 'Search Text:'
-      Layout = tltop
+      Color = clNone
       Left = 16
       Height = 17
       Top = 16
       Width = 80
     end
     object lblSearchText: TLabel
-      Layout = tltop
+      BorderSpacing.OnChange = nil
+      Color = clNone
       Left = 96
       Height = 17
       Top = 16
       Width = 320
     end
     object btnCancel: TButton
-      Default = True
+      BorderSpacing.OnChange = nil
       Caption = 'Cancel'
-      TabStop = True
-      TabOrder = 6
+      Default = True
       OnClick = btnAbortCLICK
+      TabOrder = 0
       Left = 177
       Height = 25
       Top = 112
