--- a/examples/codepageconverter/mainunit.lfm
+++ b/examples/codepageconverter/mainunit.lfm
@@ -1,21 +1,20 @@
 object LazConverterForm: TLazConverterForm
-  Caption = 'Codepage LazConverter for PAS, LFM, LRS & INC files v0.0.4'
+  Caption = 'Codepage LazConverter for PAS, LFM, LRS & INC files v0.0.5'
   ClientHeight = 463
   ClientWidth = 612
   Constraints.MinHeight = 463
   Constraints.MinWidth = 578
-  OnResize = LazConverterFormResize
   OnShow = Form1Show
-  PixelsPerInch = 94
+  PixelsPerInch = 95
   Position = poScreenCenter
-  HorzScrollBar.Page = 613
-  VertScrollBar.Page = 464
-  Left = 303
+  HorzScrollBar.Page = 611
+  VertScrollBar.Page = 462
+  Left = 322
   Height = 463
-  Top = 125
+  Top = 225
   Width = 612
   object Panel1: TPanel
-    Align = alTop
+    BorderSpacing.OnChange = nil
     ClientHeight = 192
     ClientWidth = 612
     FullRepaint = False
@@ -23,15 +22,46 @@ object LazConverterForm: TLazConverterForm
     Height = 192
     Width = 612
     object Label1: TLabel
+      BorderSpacing.OnChange = nil
       Caption = 'Path to your project:'
+      Color = clNone
       Left = 8
       Height = 19
-      Top = 8
+      Top = 16
       Width = 168
+    end
+    object Label2: TLabel
+      BorderSpacing.OnChange = nil
+      Caption = 'Convert From:'
+      Color = clNone
+      Left = 8
+      Height = 15
+      Top = 64
+      Width = 159
+    end
+    object Label3: TLabel
+      BorderSpacing.OnChange = nil
+      Caption = 'Convert To:'
+      Color = clNone
+      Left = 216
+      Height = 15
+      Top = 64
+      Width = 123
+    end
+    object Label6: TLabel
+      Anchors = [akTop, akLeft, akRight]
+      BorderSpacing.OnChange = nil
+      Caption = 'Ready...'
+      Color = clNone
+      Left = 8
+      Height = 17
+      Top = 149
+      Width = 593
     end
     object Edit1: TEdit
       Anchors = [akTop, akLeft, akRight]
-      TabOrder = 1
+      BorderSpacing.OnChange = nil
+      TabOrder = 0
       Left = 8
       Height = 23
       Top = 32
@@ -39,68 +69,58 @@ object LazConverterForm: TLazConverterForm
     end
     object Button1: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.OnChange = nil
       Caption = 'Path'
       OnClick = Button1Click
-      TabOrder = 2
+      TabOrder = 1
       Left = 530
       Height = 23
       Top = 32
       Width = 75
     end
-    object Label2: TLabel
-      Caption = 'Convert From:'
-      Left = 8
-      Height = 15
-      Top = 56
-      Width = 159
-    end
     object ComboBox1: TComboBox
+      BorderSpacing.OnChange = nil
       MaxLength = 0
-      TabOrder = 4
+      TabOrder = 3
       Left = 8
       Height = 25
-      Top = 72
+      Top = 80
       Width = 200
     end
-    object Label3: TLabel
-      Caption = 'Convert To:'
-      Left = 216
-      Height = 15
-      Top = 56
-      Width = 123
-    end
     object ComboBox2: TComboBox
+      BorderSpacing.OnChange = nil
       MaxLength = 0
       TabOrder = 6
       Left = 216
       Height = 25
-      Top = 72
+      Top = 80
       Width = 200
     end
     object CheckBox1: TCheckBox
       AllowGrayed = True
-      AutoSize = True
+      BorderSpacing.OnChange = nil
       Caption = 'Include subdirectories'
-      OnClick = CheckBox1Click
-      TabOrder = 7
+      TabOrder = 2
       Left = 424
       Height = 23
-      Top = 72
+      Top = 80
       Width = 176
     end
     object Button2: TButton
+      BorderSpacing.OnChange = nil
       Caption = 'Search'
       OnClick = Button2Click
-      TabOrder = 8
+      TabOrder = 4
       Left = 8
       Height = 25
       Top = 112
       Width = 75
     end
     object Button3: TButton
+      BorderSpacing.OnChange = nil
       Caption = 'Convert'
       OnClick = Button3Click
-      TabOrder = 9
+      TabOrder = 5
       Left = 88
       Height = 25
       Top = 112
@@ -108,103 +128,32 @@ object LazConverterForm: TLazConverterForm
     end
     object ProgressBar1: TProgressBar
       Align = alBottom
+      BorderSpacing.OnChange = nil
       Max = 100
-      TabOrder = 10
+      TabOrder = 7
       TabStop = True
       Left = 1
       Height = 17
       Top = 174
       Width = 610
     end
-    object Label5: TLabel
-      Caption = 'Directory:'
-      Left = 8
-      Height = 17
-      Top = 149
-      Width = 65
-    end
-    object Label6: TLabel
-      Anchors = [akTop, akLeft, akRight]
-      Caption = 'Ready...'
-      Left = 80
-      Height = 17
-      Top = 149
-      Width = 521
-    end
   end
-  object ListView1: TListView
-    Align = alClient
-    Columns = <    
-      item
-        Caption = 'FileName'
-        Width = 450
-      end    
-      item
-        AutoSize = True
-        Caption = 'Type'
-        Width = 0
-      end>
-    PopupMenu = PopupMenu1
-    ViewStyle = vsReport
-    OnSelectItem = ListView1SelectItem
-    Height = 232
-    Top = 192
-    Width = 612
-  end
-  object Panel2: TPanel
+  object Memo1: TMemo
     Align = alBottom
-    ClientHeight = 39
-    ClientWidth = 612
-    FullRepaint = False
-    TabOrder = 2
-    Height = 39
-    Top = 424
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.OnChange = nil
+    ReadOnly = True
+    TabOrder = 1
+    WordWrap = False
+    Height = 263
+    Top = 200
     Width = 612
-    object Button4: TButton
-      Caption = 'Remove from conversion'
-      OnClick = Button4Click
-      TabOrder = 0
-      Left = 8
-      Height = 25
-      Top = 8
-      Width = 192
-    end
-    object Button5: TButton
-      Caption = 'View'
-      OnClick = Button5Click
-      TabOrder = 1
-      Left = 208
-      Height = 25
-      Top = 8
-      Width = 127
-    end
   end
   object SelectDirectoryDialog1: TSelectDirectoryDialog
     Title = 'Select Directory'
     FilterIndex = 0
+    Title = 'Select Directory'
     left = 8
     top = 480
-  end
-  object FileSearch1: TFileSearch
-    OnFileFind = FileSearch1FileFind
-    OnChangeFolder = FileSearch1ChangeFolder
-    OnFinish = FileSearch1Finish
-    left = 8
-    top = 448
-  end
-  object PopupMenu1: TPopupMenu
-    left = 224
-    top = 8
-    object MenuItem1: TMenuItem
-      Caption = 'View File'
-      OnClick = Button5Click
-    end
-    object MenuItem2: TMenuItem
-      Caption = '-'
-    end
-    object MenuItem3: TMenuItem
-      Caption = 'Remove From Conversion'
-      OnClick = Button4Click
-    end
   end
 end
