--- a/ide/checkcompileropts.lfm
+++ b/ide/checkcompileropts.lfm
@@ -1,63 +1,92 @@
 object CheckCompilerOptsDlg: TCheckCompilerOptsDlg
-  CAPTION = 'CheckCompilerOptsDlg'
-  CLIENTHEIGHT = 307
-  CLIENTWIDTH = 624
-  POSITION = poscreencenter
-  HORZSCROLLBAR.PAGE = 625
-  VERTSCROLLBAR.PAGE = 308
-  LEFT = 328
-  HEIGHT = 307
-  TOP = 358
-  WIDTH = 624
-  object OutputGroupBox: TGROUPBOX
-    ANCHORS = [aktop, akleft, akright, akbottom]
-    CAPTION = 'Output'
-    CLIENTHEIGHT = 127
-    CLIENTWIDTH = 620
-    PARENTCTL3D = False
-    TABORDER = 0
-    HEIGHT = 144
-    TOP = 112
-    WIDTH = 624
-    object OutputListbox: TLISTBOX
-      ALIGN = alclient
-      TABORDER = 0
-      TABSTOP = True
-      TOPINDEX = -1
-      HEIGHT = 127
-      WIDTH = 620
+  Caption = 'CheckCompilerOptsDlg'
+  ClientHeight = 307
+  ClientWidth = 624
+  PixelsPerInch = 78
+  Position = poScreenCenter
+  HorzScrollBar.Page = 623
+  VertScrollBar.Page = 306
+  Left = 251
+  Height = 307
+  Top = 182
+  Width = 624
+  object OutputGroupBox: TGroupBox
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.OnChange = nil
+    Caption = 'Output'
+    ClientHeight = 127
+    ClientWidth = 620
+    ParentColor = True
+    ParentCtl3D = False
+    TabOrder = 0
+    Height = 144
+    Top = 112
+    Width = 624
+    object OutputListbox: TListBox
+      Align = alClient
+      BorderSpacing.OnChange = nil
+      TabOrder = 0
+      TopIndex = -1
+      Height = 127
+      Width = 620
     end
   end
-  object CloseButton: TBUTTON
-    ANCHORS = [akbottom]
-    CAPTION = 'Close'
-    TABSTOP = True
-    TABORDER = 1
-    ONCLICK = CloseButtonCLICK
-    LEFT = 274
-    HEIGHT = 25
-    TOP = 272
-    WIDTH = 75
-  end
-  object TestGroupbox: TGROUPBOX
-    ALIGN = altop
-    CAPTION = 'Test'
-    CLIENTHEIGHT = 88
-    CLIENTWIDTH = 620
-    PARENTCTL3D = False
-    TABORDER = 2
-    HEIGHT = 105
-    WIDTH = 624
-    object TestMemo: TMEMO
-      ALIGN = alclient
-      LINES.Strings = (
-        'TestMemo'
+  object TestGroupbox: TGroupBox
+    Align = alTop
+    BorderSpacing.OnChange = nil
+    Caption = 'Test'
+    ClientHeight = 88
+    ClientWidth = 620
+    ParentColor = True
+    ParentCtl3D = False
+    TabOrder = 1
+    Height = 105
+    Width = 624
+    object TestMemo: TMemo
+      Align = alClient
+      BorderSpacing.OnChange = nil
+      Lines.Strings = (
+        
       )
-      TABSTOP = True
-      TABSTOP = True
-      TABORDER = 0
-      HEIGHT = 88
-      WIDTH = 620
+      TabOrder = 0
+      Height = 88
+      Width = 620
     end
+  end
+  object CloseButton1: TBitBtn
+    Anchors = [akBottom]
+    Caption = 'Close'
+    Glyph.Data = {
+      F70200002F2A2058504D202A2F0A7374617469632063686172202A20626F7461
+      6F4665636861725F78706D5B5D203D207B0A22323420323420322031222C0A22
+      200963204E6F6E65222C0A222E09632023303030303030222C0A222020202020
+      20202020202020202020202020202020202020222C0A22202020202020202020
+      202020202020202020202020202020222C0A2220202020202020202020202020
+      2020202020202020202020222C0A222020202020202020202020202020202020
+      20202020202020222C0A22202020202020202020202020202020202020202020
+      202020222C0A2220202020202020202020202020202020202020202020202022
+      2C0A22202020202020202E2020202020202E202020202020202020222C0A2220
+      202020202020202E202020202E2E2E2020202020202020222C0A222020202020
+      2020202E2E20202E2E2E2E2020202020202020222C0A22202020202020202020
+      2E2E202E2E2E202020202020202020222C0A222020202020202020202E2E2E2E
+      2E20202020202020202020222C0A22202020202020202020202E2E2E20202020
+      20202020202020222C0A222020202020202020202E2E2E2E2E20202020202020
+      202020222C0A2220202020202020202E2E2E2E2E2E2E20202020202020202022
+      2C0A22202020202020202E2E2E20202E2E2E2E2020202020202020222C0A2220
+      20202020202E2E2E202020202E2E2E2E20202020202020222C0A222020202020
+      2E2E2E2020202020202E2E2020202020202020222C0A22202020202020202020
+      202020202020202020202020202020222C0A2220202020202020202020202020
+      2020202020202020202020222C0A222020202020202020202020202020202020
+      20202020202020222C0A22202020202020202020202020202020202020202020
+      202020222C0A2220202020202020202020202020202020202020202020202022
+      2C0A22202020202020202020202020202020202020202020202020222C0A2220
+      2020202020202020202020202020202020202020202020227D3B0A
+    }
+    OnClick = CloseButtonCLICK
+    TabOrder = 2
+    Left = 269
+    Height = 33
+    Top = 264
+    Width = 85
   end
 end
