fixes for the contributors in about form
 SVN 7267@trunk

--- a/ide/aboutfrm.lfm
+++ b/ide/aboutfrm.lfm
@@ -14,6 +14,7 @@ object AboutForm: TAboutForm
   Width = 577
   object Label1: TLabel
     Alignment = taCenter
+    BorderSpacing.OnChange = nil
     Caption = 'Version #:'
     ParentColor = True
     Left = 14
@@ -23,6 +24,7 @@ object AboutForm: TAboutForm
   end
   object Label2: TLabel
     Alignment = taCenter
+    BorderSpacing.OnChange = nil
     Caption = 'Date:'
     ParentColor = True
     Left = 14
@@ -31,6 +33,7 @@ object AboutForm: TAboutForm
     Width = 27
   end
   object Button1: TBitBtn
+    BorderSpacing.OnChange = nil
     Caption = 'Close'
     Glyph.Data = {
       F70200002F2A2058504D202A2F0A7374617469632063686172202A20626F7461
@@ -66,6 +69,7 @@ object AboutForm: TAboutForm
     Width = 75
   end
   object Notebook1: TNotebook
+    BorderSpacing.OnChange = nil
     PageIndex = 0
     Left = 215
     Height = 232
@@ -79,6 +83,7 @@ object AboutForm: TAboutForm
       Width = 345
       object AboutMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssAutoBoth
         TabOrder = 0
@@ -90,11 +95,11 @@ object AboutForm: TAboutForm
       Caption = 'Contributors'
       ClientWidth = 345
       ClientHeight = 206
-      Visible = False
       Height = 206
       Width = 345
       object ContributorsMemo: TMemo
         Align = alClient
+        BorderSpacing.OnChange = nil
         ReadOnly = True
         ScrollBars = ssBoth
         TabOrder = 0
